--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
     <groupId>java.net.countercraft.movecraft.combat</groupId>
     <artifactId>Movecraft-Combat</artifactId>
-    <version>0.4.4</version>
+    <version>0.4.8</version>
     <packaging>jar</packaging>
 
-    <name>Movecraft Combat</name>
+    <name>Movecraft-Combat</name>
 
     <description>Combat features of Movecraft</description>
     <properties>
