--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,15 +7,15 @@ AADirectorsAllowed: # List of string names to craft types that are allowed to us
   - "Airship"
   - "SubAirship"
 
-# Contact Explosives
-EnableContactExplosives: true # Enable TNT contact explosives
-
 # Cannon Directors
 CannonDirectorDistance: 100 # Max range at which TNT will be redirected
 CannonDirectorRange: 120 # Max range at which it will direct to a block vs in the general direction
 CannonDirectorsAllowed: # List of string names to craft types that are allowed to use Cannon Directors
   - "Airship"
   - "SubAirship"
+
+# Contact Explosives
+EnableContactExplosives: true # Enable TNT contact explosives
 
 # Durability Override
 DurabilityOverride: # List of block IDs: ignore percent
@@ -37,5 +37,6 @@ DamageTimeout: 300 # Timeout for damages in seconds
 
 # Combat Release Tracking
 EnableCombatReleaseTracking: false # Enable tracking of combat releasing
-CombatReleaseBanLength: 60 # Length of combat release ban in seconds
+EnableCombatReleaseKick: true # Enable combat release kick, overriden to true if CombatReleaseBanLength isn't 0
+CombatReleaseBanLength: 60 # Length of combat release ban in seconds, set to 0 to disable
 CombatReleaseScuttle: true # Enable scuttling of crafts when combat released
