--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,8 @@ version: ${project.version}
 main: net.countercraft.movecraft.combat.movecraftcombat.MovecraftCombat
 api-version: 1.10.2
 prefix: Movecraft-Combat
-depend: [Movecraft, WorldGuard]
+depend: [Movecraft]
+softdepend: [WorldGuard]
 authors: [TylerS1066, BaccaYarro]
 description: Combat features of Movecraft
 website: https://github.com/APDevTeam
