--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,14 +1,10 @@
-name: Movecraft Combat
+name: Movecraft-Combat
 version: ${project.version}
 main: net.countercraft.movecraft.combat.movecraftcombat.MovecraftCombat
 api-version: 1.10.2
 prefix: Movecraft-Combat
 depend: [Movecraft]
 softdepend: [WorldGuard]
-authors: [TylerS1066, BaccaYarro]
+authors: [TylerS1066, cccm5, a4bde, eirik1996, BaccaYarro]
 description: Combat features of Movecraft
 website: https://github.com/APDevTeam
-commands:
-  scuttle:
-    description: Sinks piloted craft
-    usage: /scuttle
