--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,6 +9,9 @@ authors: [TylerS1066, cccm5, a4bde, eirik1996, BaccaYarro]
 description: Combat features of Movecraft
 website: https://github.com/APDevTeam
 commands:
-  tracers:
+  tracersetting:
     description: Configure tracer settings
-    usage: /tracers [OFF | BLOCKS | PARTICLES] [HIGH | MEDIUM | LOW]
+    usage: /tracersetting [HIGH | MEDIUM | LOW | OFF]
+  tracermode:
+    description: Configure tracer mode
+    usage: /tracermode [BLOCKS | PARTICLES]
