--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout MCC
+      uses: actions/checkout@v1
+      with:
+        path: MC-Combat
+    - name: Checkout Movecraft
+      uses: actions/checkout@v2
+      with:
+        repository: 'APDevTeam/Movecraft'
+        path: Movecraft
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
@@ -19,8 +27,13 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    
+    # Build Movecraft
+    - run: cd Movecraft & mvn clean install
+
+    # Build MCC
+    - run: mvn -B package --file MC-Combat/pom.xml
+
     - name: Stage jar
       run: mkdir staging && cp target/Movecraft-Combat*.jar staging
     - name: Rename jar
