--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
     
     # Build Movecraft
-    - run: cd Movecraft & mvn clean install
+    - run:  mvn -B package --file Movecraft/pom.xml
 
     # Build MCC
     - run: mvn -B package --file MC-Combat/pom.xml
