--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,6 +17,8 @@ jobs:
       with:
         repository: 'APDevTeam/Movecraft'
         path: Movecraft
+    - run: ls
+    - run: pwd
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
