--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,11 +24,29 @@ jobs:
       with:
         java-version: 1.8
     - name: Cache Maven packages
+      id: cache
       uses: actions/cache@v2
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
+    
+    # Run Spigot BuildTools for NMS if required
+    - name: Setup BuildTools
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: mkdir BuildTools
+    - name: Download BuildTools
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: wget -O BuildTools/BuildTools.jar https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
+    - name: 1.10.2
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: cd BuildTools && java -jar BuildTools.jar --rev 1.10.2
+    - name: 1.11.2
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: cd BuildTools && java -jar BuildTools.jar --rev 1.11.2
+    - name: 1.12.1
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: cd BuildTools && java -jar BuildTools.jar --rev 1.12.1
     
     # Build Movecraft
     - run:  mvn -B package --file Movecraft/pom.xml
