--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -55,6 +55,8 @@ FireballLifespan: 6 # Lifespan of fireballs in seconds
 # TNT Tracers
 TracerRateTicks: 5.0 # Rate at which tracers are spawned on the path of flying TNT
 TracerMinDistance: 60 # Minimum distance at which glowstone tracers are spawned on explosion
+TracerParticles: FIREWORKS_SPARK # Particle to use for particle tracers
+ExplosionParticles: VILLAGER_ANGRY # Particle to use for particle tracer explosions
 
 
 ### Custom features
