--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,19 +31,24 @@ jobs:
     
     # Run Spigot BuildTools for NMS if required
     - name: Setup BuildTools
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: mkdir BuildTools
-    - name: Download BuildTools
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: wget -O BuildTools/BuildTools.jar https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
-    - name: 1.10.2
-      if: steps.cache.outputs.cache-hit != 'true'
+      run: mkdir BuildTools && wget -O BuildTools/BuildTools.jar https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
+    - name: Check 1.10.2
+      id: frostburn
+      run: test -f ~/.m2/repository/org/bukkit/craftbukkit/1.10.2-R0.1-SNAPSHOT/craftbukkit-1.10.2-R0.1-SNAPSHOT.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
+    - name: Build 1.10.2
+      if: steps.frostburn.outputs.sucess != 'true'
       run: cd BuildTools && java -jar BuildTools.jar --rev 1.10.2
-    - name: 1.11.2
-      if: steps.cache.outputs.cache-hit != 'true'
+    - name: Check 1.11.2
+      id: exploration
+      run: test -f ~/.m2/repository/org/bukkit/craftbukkit/1.11.2-R0.1-SNAPSHOT/craftbukkit-1.11.2-R0.1-SNAPSHOT.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
+    - name: Build 1.11.2
+      if: steps.exploration.outputs.sucess != 'true'
       run: cd BuildTools && java -jar BuildTools.jar --rev 1.11.2
-    - name: 1.12.2
-      if: steps.cache.outputs.cache-hit != 'true'
+    - name: Check 1.12.1
+      id: color
+      run: test -f ~/.m2/repository/org/bukkit/craftbukkit/1.12.2-R0.1-SNAPSHOT/craftbukkit-1.12.2-R0.1-SNAPSHOT.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
+    - name: Build 1.12.2
+      if: steps.color.outputs.sucess != 'true'
       run: cd BuildTools && java -jar BuildTools.jar --rev 1.12.2
     
     # Build Movecraft
