--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Build 1.11.2
       if: steps.exploration.outputs.sucess != 'true'
       run: cd BuildTools && java -jar BuildTools.jar --rev 1.11.2
-    - name: Check 1.12.1
+    - name: Check 1.12.2
       id: color
       run: test -f ~/.m2/repository/org/bukkit/craftbukkit/1.12.2-R0.1-SNAPSHOT/craftbukkit-1.12.2-R0.1-SNAPSHOT.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
     - name: Build 1.12.2
@@ -55,16 +55,16 @@ jobs:
     - name: Build Movecraft
       run:  mvn -B package -T 1C --file Movecraft/pom.xml
 
-    # Build MCC
+    # Build Movecraft-Combat
     - name: Build Movecraft-Combat
-      run: mvn -B package -T 1C --file MC-Combat/pom.xml
+      run: mvn -B package -T 1C --file Movecraft-Combat/pom.xml
 
     - name: Stage jar
-      run: mkdir staging && cp MC-Combat/target/Movecraft-Combat*.jar staging
+      run: mkdir staging && cp Movecraft-Combat/target/Movecraft-Combat*.jar staging
     - name: Rename jar
       run: mv staging/Movecraft-Combat*.jar staging/Movecraft-Combat_$GITHUB_SHA.jar
     - name: Upload jar
       uses: actions/upload-artifact@v2
       with:
-        name: MCC_Dev-Build
+        name: Movecraft-Combat_Dev-Build
         path: staging/Movecraft-Combat_*.jar
