--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>java.net.countercraft.movecraft.combat</groupId>
     <artifactId>Movecraft-Combat</artifactId>
-    <version>1.5.ef</version>
+    <version>1.5.eh</version>
     <packaging>jar</packaging>
 
     <name>Movecraft-Combat</name>
