--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -74,10 +74,11 @@ jobs:
   nether_1_16_5:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Set up JDK 16
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.11
+          distribution: 'adopt-hotspot'
+          java-version: '16'
       - name: Cache 1.16.5 Maven package
         id: cacheNether
         uses: actions/cache@v2
@@ -159,7 +160,7 @@ jobs:
         repository: 'APDevTeam/Movecraft'
         path: Movecraft
     - name: Set up JDK 16
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
         distribution: 'adopt-hotspot'
         java-version: '16'
