--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,161 +4,14 @@ name: Java CI
 on: [workflow_dispatch, push, pull_request]
 
 jobs:
-  # Build 1.14.4 NMS
-  pillage_1_14_4:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up JDK 13
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt-hotspot'
-          java-version: '13'
-      - name: Cache 1.14.4 Maven package
-        id: cachePillage
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository/org/bukkit/craftbukkit/1.14.4-R0.1-SNAPSHOT/
-          key: ${{ runner.os }}-1.14.4
-          restore-keys: ${{ runner.os }}-1.14.4
-      - name: Cache Maven packages
-        id: cacheMain
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2_1.14.4
-          restore-keys: ${{ runner.os }}-m2_1.14.4
-
-      - name: Setup BuildTools
-        run: mkdir BuildTools && wget -O BuildTools/BuildTools.jar https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
-      - name: Check 1.14.4
-        id: pillage
-        run: test -f ~/.m2/repository/org/bukkit/craftbukkit/1.14.4-R0.1-SNAPSHOT/craftbukkit-1.14.4-R0.1-SNAPSHOT.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
-      - name: Build 1.14.4
-        if: steps.pillage.outputs.sucess != 'true'
-        run: cd BuildTools && java -jar BuildTools.jar --rev 1.14.4 --compile craftbukkit
-
-  # Build 1.15.2 NMS
-  bees_1_15_2:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up JDK 14
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt-hotspot'
-          java-version: '14'
-      - name: Cache 1.15.2 Maven package
-        id: cacheBees
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository/org/bukkit/craftbukkit/1.15.2-R0.1-SNAPSHOT/
-          key: ${{ runner.os }}-1.15.2
-          restore-keys: ${{ runner.os }}-1.15.2
-      - name: Cache Maven packages
-        id: cacheMain
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2_1.15.2
-          restore-keys: ${{ runner.os }}-m2_1.15.2
-
-      - name: Setup BuildTools
-        run: mkdir BuildTools && wget -O BuildTools/BuildTools.jar https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
-      - name: Check 1.15.2
-        id: bees
-        run: test -f ~/.m2/repository/org/bukkit/craftbukkit/1.15.2-R0.1-SNAPSHOT/craftbukkit-1.15.2-R0.1-SNAPSHOT.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
-      - name: Build 1.15.2
-        if: steps.bees.outputs.sucess != 'true'
-        run: cd BuildTools && java -jar BuildTools.jar --rev 1.15.2 --compile craftbukkit
-
-  # Build 1.16.5 NMS
-  nether_1_16_5:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up JDK 16
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt-hotspot'
-          java-version: '16'
-      - name: Cache 1.16.5 Maven package
-        id: cacheNether
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository/org/bukkit/craftbukkit/1.16.5-R0.1-SNAPSHOT/
-          key: ${{ runner.os }}-1.16.5
-          restore-keys: ${{ runner.os }}-1.16.5
-      - name: Cache Maven packages
-        id: cacheMain
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2_1.16.5
-          restore-keys: ${{ runner.os }}-m2_1.16.5
-
-      - name: Setup BuildTools
-        run: mkdir BuildTools && wget -O BuildTools/BuildTools.jar https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
-      - name: Check 1.16.5
-        id: nether3
-        run: test -f ~/.m2/repository/org/bukkit/craftbukkit/1.16.5-R0.1-SNAPSHOT/craftbukkit-1.16.5-R0.1-SNAPSHOT.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
-      - name: Build 1.16.5
-        if: steps.nether3.outputs.sucess != 'true'
-        run: cd BuildTools && java -jar BuildTools.jar --rev 1.16.5 --compile craftbukkit
-
-  # Build 1.17 NMS
-  goats_1_17:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up JDK 16
-        uses: actions/setup-java@v2
-        with:
-          distribution: 'adopt-hotspot'
-          java-version: '16'
-      - name: Cache 1.17 Maven package
-        id: cacheGoats
-        uses: actions/cache@v2
-        with:
-            path: |
-              ~/.m2/repository/org/spigotmc/spigot/1.17-R0.1-SNAPSHOT/
-              ~/.m2/repository/org/spigotmc/spigot-parent/
-              ~/.m2/repository/org/spigotmc/minecraft-server/
-            key: ${{ runner.os }}-spigot-1.17.0-all
-            restore-keys: ${{ runner.os }}-spigot-1.17.0-all
-      - name: Cache Maven packages
-        id: cacheMain
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2_1.17.0
-          restore-keys: ${{ runner.os }}-m2_1.17.0
-
-      - name: Setup BuildTools
-        run: mkdir BuildTools && wget -O BuildTools/BuildTools.jar https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
-      - name: Check 1.17 Spigot
-        id: goats
-        run: test -f ~/.m2/repository/org/spigotmc/spigot/1.17-R0.1-SNAPSHOT/spigot-1.17-R0.1-SNAPSHOT.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
-      - name: Check 1.17 Spigot (Mojang)
-        id: goatsMojang
-        run: test -f ~/.m2/repository/org/spigotmc/spigot/1.17-R0.1-SNAPSHOT/spigot-1.17-R0.1-SNAPSHOT-remapped-mojang.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
-      - name: Check 1.17 Spigot (Obf)
-        id: goatsObf
-        run: test -f ~/.m2/repository/org/spigotmc/spigot/1.17-R0.1-SNAPSHOT/spigot-1.17-R0.1-SNAPSHOT-remapped-obf.jar && echo "::set-output name=sucess::true" || echo "::set-output name=sucess::false"
-      - name: Build 1.17
-        if: steps.goats.outputs.sucess != 'true' || steps.goatsMojang.outputs.sucess != 'true' || steps.goatsObf.outputs.sucess != 'true'
-        run: cd BuildTools && java -jar BuildTools.jar --rev 1.17 --remapped
-
   build:
     runs-on: ubuntu-latest
-    needs: [pillage_1_14_4, bees_1_15_2, nether_1_16_5, goats_1_17]
 
     steps:
     - name: Checkout Movecraft-Combat
       uses: actions/checkout@v2
       with:
         path: Movecraft-Combat
-    - name: Checkout Movecraft
-      uses: actions/checkout@v2
-      with:
-        repository: 'APDevTeam/Movecraft'
-        path: Movecraft
     - name: Set up JDK 16
       uses: actions/setup-java@v2
       with:
@@ -171,45 +24,12 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2
         restore-keys: ${{ runner.os }}-m2
-    - name: Cache 1.14.4 Maven package
-      id: cachePillage
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2/repository/org/bukkit/craftbukkit/1.14.4-R0.1-SNAPSHOT/
-        key: ${{ runner.os }}-1.14.4
-        restore-keys: ${{ runner.os }}-1.14.4
-    - name: Cache 1.15.2 Maven package
-      id: cacheBees
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2/repository/org/bukkit/craftbukkit/1.15.2-R0.1-SNAPSHOT/
-        key: ${{ runner.os }}-1.15.2
-        restore-keys: ${{ runner.os }}-1.15.2
-    - name: Cache 1.16.5 Maven package
-      id: cacheNether3
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2/repository/org/bukkit/craftbukkit/1.16.5-R0.1-SNAPSHOT/
-        key: ${{ runner.os }}-1.16.5
-        restore-keys: ${{ runner.os }}-1.16.5
-    - name: Cache 1.17 Maven package
-      id: cacheGoats
-      uses: actions/cache@v2
-      with:
-          path: |
-            ~/.m2/repository/org/spigotmc/spigot/1.17-R0.1-SNAPSHOT/
-            ~/.m2/repository/org/spigotmc/spigot-parent/
-            ~/.m2/repository/org/spigotmc/minecraft-server/
-          key: ${{ runner.os }}-spigot-1.17.0-all
-          restore-keys: ${{ runner.os }}-spigot-1.17.0-all
-    
-    # Build Movecraft
-    - name: Build Movecraft
-      run:  mvn -B package -T 1C --file Movecraft/pom.xml
 
     # Build Movecraft-Combat
     - name: Build Movecraft-Combat
       run: mvn -B package -T 1C --file Movecraft-Combat/pom.xml
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Stage jar
       run: mkdir staging && cp Movecraft-Combat/target/Movecraft-Combat*.jar staging
