--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>github</id>
+            <name>GitHub APDevTeam Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/APDevTeam/*</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -103,8 +108,6 @@
             <groupId>net.countercraft.movecraft</groupId>
             <artifactId>Movecraft</artifactId>
             <version>LATEST</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/../Movecraft/target/Movecraft.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>it.unimi.dsi</groupId>
