--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
             <id>github</id>
             <name>GitHub APDevTeam/Movecraft Apache Maven Packages</name>
             <url>https://maven.pkg.github.com/APDevTeam/Movecraft</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
