--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>java.net.countercraft.movecraft.combat</groupId>
     <artifactId>Movecraft-Combat</artifactId>
-    <version>2.a.11</version>
+    <version>2.a.12</version>
     <packaging>jar</packaging>
 
     <name>Movecraft-Combat</name>
@@ -45,7 +45,7 @@
                             <relocations>
                                 <relocation>
                                     <pattern>it.unimi</pattern>
-                                    <shadedPattern>net.countercraft.movecraft.combat.movecraftcombat.libs.it.unimi</shadedPattern>
+                                    <shadedPattern>net.countercraft.movecraft.combat.libs.it.unimi</shadedPattern>
                                 </relocation>
                             </relocations>
                             <minimizeJar>true</minimizeJar>
@@ -114,6 +114,7 @@
             <groupId>net.countercraft</groupId>
             <artifactId>movecraft</artifactId>
             <version>LATEST</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>it.unimi.dsi</groupId>
