--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -46,8 +46,8 @@ EnableContactExplosives: true # Enable TNT contact explosives
 
 # Durability Override
 DurabilityOverride: # List of block IDs: ignore percent
-  END_STONE: 80
-  END_STONE_BRICKS: 80
+  ENDER_STONE: 80
+  END_BRICKS: 80
 
 # Fireball Lifespan
 FireballLifespan: 6 # Lifespan of fireballs in seconds
