--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -22,10 +22,7 @@ CannonDirectorsAllowed: # List of string names to craft types that are allowed t
 DirectorTool: STICK # Material name for director control.
 TransparentBlocks: # List of MATERIAL_NAMES which are ignored for directing.  See https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Material.html for a full list.
   - AIR
-  - GLASS
-  - THIN_GLASS
-  - STAINED_GLASS
-  - STAINED_GLASS_PANE
+  - "#glass"
   - IRON_FENCE
   - REDSTONE_WIRE
   - IRON_TRAPDOOR
