--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Set up JDK 16
       uses: actions/setup-java@v2
       with:
-        distribution: 'adopt-hotspot'
-        java-version: '16'
+        distribution: 'temurin'
+        java-version: '17'
     - name: Cache Maven packages
       id: cacheMain
       uses: actions/cache@v2
