--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -76,7 +76,11 @@ EnableFireballPenetration: false # Randomly replace blocks with fire when they a
 AddFiresToHitbox: true # Add fires lit on the surface of a craft to its hitbox so they don't obstruct it.
 
 # TNT Translocation Behavior
-ReImplementTNTTranslocation: false # Re-implement TNT translocation in 1.11+, ignored in 1.10
+ReImplementTNTTranslocation: false # Re-implement TNT translocation in 1.11+
 
 # Movement Tracers
 MovementTracers: false # Add particle tracers to the movement of crafts (note: the performance impact is untested!)
+SpecificParticle: COMPOSTER # Particle to use for specific movement tracer blocks.
+    # Note: The default is all moveBlocks of the craft type.
+    #   You can override this by adding a list of specific blocks to the craft type as movementTracerBlocks.
+GeneralParticle: CRIT # Particle to use for general movement tracers.
