Add separate config option for underwater penetration

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -73,6 +73,7 @@ EnableAntiRadar: false # Enable invisibility for craft pilots to nullify minimap
 
 # Fire Behavior
 EnableFireballPenetration: false # Randomly replace blocks with fire when they are struck by fireballs.
+UnderwaterFireballPenetration: false # Allow fireballs to damage flammable blocks underwater.
 AddFiresToHitbox: true # Add fires lit on the surface of a craft to its hitbox so they don't obstruct it.
 
 # TNT Translocation Behavior
