Add to default config

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -79,3 +79,7 @@ SpecificParticle: COMPOSTER # Particle to use for specific movement tracer block
     # Note: The default is all moveBlocks of the craft type.
     #   You can override this by adding a list of specific blocks to the craft type as movementTracerBlocks.
 GeneralParticle: CRIT # Particle to use for general movement tracers.
+
+# Blast Resistance Override
+BlastResistanceOverride:
+  - "#glass": 6 # Make glass as strong as stone
