--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -82,4 +82,4 @@ GeneralParticle: CRIT # Particle to use for general movement tracers.
 
 # Blast Resistance Override
 BlastResistanceOverride:
-  - "#glass": 6 # Make glass as strong as stone
+  "#glass": 6 # Make glass as strong as stone
