Add weekly scheduled run at Satuirday 10:22 UTC

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,12 @@
   
 name: Java CI
 
-on: [workflow_dispatch, push, pull_request]
+on: 
+  workflow_dispatch:
+  push:
+  pull_request:
+  schedule:
+    - cron: '22 10 * * 6'
 
 jobs:
   build:
