add example entry for obsidian

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -84,6 +84,10 @@ SpecificParticle: COMPOSTER # Particle to use for specific movement tracer block
     #   You can override this by adding a list of specific blocks to the craft type as movementTracerBlocks.
 GeneralParticle: CRIT # Particle to use for general movement tracers.
 
+# Flammability overrides
+#FlammabilityOverride:
+#  "obsidian": 20,100
+
 # Blast Resistance Override
 BlastResistanceOverride:
   "#glass": 6 # Make glass as strong as stone
