--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -86,7 +86,12 @@ GeneralParticle: CRIT # Particle to use for general movement tracers.
 
 # Flammability overrides
 #FlammabilityOverride:
-#  "obsidian": 20,100
+#  obsidian:
+#    burnOddity: 20
+#    igniteOddity: 100
+#  stone:
+#    burnOddity: 20
+#    igniteOddity: 100
 
 # Blast Resistance Override
 BlastResistanceOverride:
