[Feature] Flammability override (#131)
* add flammability override feature

* remove debug message

* remove debug comment

* refactoring

* update comments

* begin unified block override class

* unified class for block overrides

* call new class

* delete old individual classes

* it helps initializing fields...

* use apache methods => scans superclasses recursively

* move to feature package

* change NMS instance and map to private

* make final

* remove blastRes vanilla fields

* use Optional.of, will never return null at this point

* add type args to map

* &= and Nullable and lambda as well as comments

* updat test comment

* add example entry for obsidian

* update test comment and add nicer parsing logic together with example

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -86,6 +86,15 @@ SpecificParticle: COMPOSTER # Particle to use for specific movement tracer block
     #   You can override this by adding a list of specific blocks to the craft type as movementTracerBlocks.
 GeneralParticle: CRIT # Particle to use for general movement tracers.
 
+# Flammability overrides
+#FlammabilityOverride:
+#  obsidian:
+#    burnOddity: 20
+#    igniteOddity: 100
+#  stone:
+#    burnOddity: 20
+#    igniteOddity: 100
+
 # Blast Resistance Override
 BlastResistanceOverride:
   "#glass": 6 # Make glass as strong as stone
