--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -41,6 +41,7 @@ BleedfixExplosion: true
 
 # Fireball Lifespan
 FireballLifespan: 6 # Lifespan of fireballs in seconds
+FireballSpeed: 1.0 # Speed multiplier for fireballs
 
 # TNT Tracers
 TracerRateTicks: 5.0 # Rate at which tracers are spawned on the path of flying TNT
@@ -51,7 +52,6 @@ TracerBlock: COBWEB # Block to use for block tracers
 ExplosionBlock: GLOWSTONE # Block to use to indicate tracer explosions
 TracerParticles: FIREWORKS_SPARK # Particle to use for particle tracers  See https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html for options.
 ExplosionParticles: VILLAGER_ANGRY # Particle to use for particle tracer explosions
-
 
 ### Custom features
 
