Elytra Artillery Nerf
Added the config option "DisableDirectorElytra"(default false) where when true, will prevent players with elytras on from using directors. Checks both when equipping an elytra and trying to use a director sign.

Replaced calls to deprecated methods with supported ones. However, the supported ones seem to have display issues when used in chat

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,6 +13,7 @@ CannonDirectorRange: 120 # Max range at which it will direct to a block vs in th
 
 # Directors
 DirectorTool: STICK # Material name for director control.
+DisableDirectorElytra: false # Disables the ability for players with elytras equipped to use directors
 TransparentBlocks: # List of MATERIAL_NAMES which are ignored for directing.  See https://hub.spigotmc.org/javadocs/bukkit/org/bukkit/Material.html for a full list.
   - "#glass"
   - IRON_BARS
